workshop04/weather-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: weather-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      name: weatherapp
  template:
    metadata:
      labels:
        name: weatherapp
        version: v1
    spec:
      containers:
      - name: weathercont
        image: stackupiss/weather:v1
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - name: weatherapp-port
          containerPort: 3000
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
