workshop04/weather-svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: weatherapp-svc

spec:
  selector:
    name: weatherapp # match to db-deployment.yaml
    version: v1
  type: ClusterIP
  ports:
  - name: weatherapp-svc-port
    port: 80
    targetPort: weatherapp-port
