workshop04/fortune-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: fortune-ingress-vs

spec:
  hosts:
  - "*"
  gateways:
  - fortune-ingress.default.svc.cluster.local
  http:
  - match:
    - uri:
        exact: /v1
    route:
    - destination:
        host: weatherapp-svc.default.svc.cluster.local # can be fortuneapp-svc
        port:
          number: 80
    rewrite:
      uri: /
  - match:
    - uri:
        exact: /v3
    route:
    - destination:
        host: fortuneapp-svc.default.svc.cluster.local # can be fortuneapp-svc
        port:
          number: 80
    rewrite:
      uri: /
  - match:
    - uri:
        exact: /v2
    route:
    - destination:
        host: myappv1-svc.default.svc.cluster.local # can be fortuneapp-svc
        port:
          number: 80
    rewrite:
      uri: /
  - match:
    - uri:
        exact: /random
    route:
    - destination:
        host: fortuneapp-svc.default.svc.cluster.local # can be fortuneapp-svc
        port:
          number: 80
      weight: 50
    - destination:
        host: myappv1-svc.default.svc.cluster.local # can be fortuneapp-svc
        port:
          number: 80
      weight: 50
    rewrite:
      uri: /
  - match:
    - headers:
        user:
          exact: user
      uri:
        prefix: "/v5"
    route:
    - destination:
        host: fortuneapp-svc.default.svc.cluster.local # can be fortuneapp-svc
        port:
          number: 80
    rewrite:
      uri: /
