workshop04/podserviceentry.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry

metadata:
  name: weatherapp-egress

spec:
  hosts:
  - api.openweathermap.org
  ports:
  - number: 80
    protocol: HTTP
    name: http
  - number: 443
    protocol: HTTPS
    name: https
  location: MESH_EXTERNAL
  resolution: DNS
